feat(-): 删除axios，使用Taro.request

--- a/src/pages/home/detail/index.module.less
+++ b/src/pages/home/detail/index.module.less
@@ -208,7 +208,7 @@
     &__chart {
       height: 200px;
       width: 100%;
-      padding: 20px 0;
+      position: relative;
       &__legend {
         display: flex;
         margin: 20px 40px;
