--- a/src/pages/score/index.module.less
+++ b/src/pages/score/index.module.less
@@ -1,8 +1,16 @@
 .score {
-  position: relative;
+  position: absolute;
   top: 150px;
   left: 0;
   bottom: 0;
-  background: #fac;
-  overflow-y: auto;
+  .date__tabs {
+    width: 100%;
+    height: 70px;
+    background: #ddd;
+    font-size: 24px;
+    display: flex;
+  }
+  swiper {
+    height: 100%!important;
+  }
 }
