--- a/src/app.less
+++ b/src/app.less
@@ -1,3 +1,9 @@
 #app {
   font-size: 28px;
 }
+.score-swiper {
+  height: 100%!important;
+  .nut-swiper-inner {
+    height: 100%!important;
+  }
+}
