feat(-): 比分日期筛选查询

--- a/src/pages/score/index.module.less
+++ b/src/pages/score/index.module.less
@@ -15,17 +15,18 @@
       height: 100%;
       &__item {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         align-items: center;
         justify-content: center;
         flex: 1;
-        color: #666;
+        font-size: 26px;
+        color: #d4231c;
         &__date {
           flex: 1;
           font-size: 20px;
         }
         &__week{
-          flex: 1;
+          //flex: 1;
           font-size: 20px;
         }
         &__today {
