--- a/src/pages/recommend/expertDetail/index.module.less
+++ b/src/pages/recommend/expertDetail/index.module.less
@@ -1,4 +1,12 @@
-.second__zone {
+.expert__detail {
+  position: absolute;
+  top: 150px;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  overflow-y: auto;
+  padding: 20px;
+  background: #dededd;
   .overview {
     background: #fff;
     border-radius: 25px;
