--- a/src/pages/course/index.module.less
+++ b/src/pages/course/index.module.less
@@ -2,7 +2,126 @@
   position: absolute;
   top: 150px;
   left: 0;
-  right: 0;
   bottom: 0;
-  background: #fac;
+  right: 0;
+  .date__tabs {
+    width: 100%;
+    height: 70px;
+    background: #eceaea;
+    font-size: 24px;
+    display: flex;
+    &__container {
+      display: flex;
+      height: 100%;
+      &__item {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        flex: 1;
+        font-size: 26px;
+        color: #d4231c;
+        &__date {
+          flex: 1;
+          font-size: 20px;
+        }
+        &__week{
+          //flex: 1;
+          font-size: 20px;
+        }
+        &__today {
+          font-size: 28px;
+          color: #f22;
+        }
+      }
+    }
+  }
+  swiper {
+    height: 100%!important;
+  }
+  .outer{
+    padding: 10px 0 170px 0;
+  }
+  .item {
+    padding: 20px 40px;
+    border-bottom: 10px solid #f2f2f2;
+    font-size: 20px;
+    &__top {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+      color: #999;
+      &__left {
+        position: absolute;
+        left: 0;
+        width: 200px;
+        display: flex;
+        &__name {
+          flex: 2;
+          color: #d4231c;
+        }
+        &__time {
+          flex: 1;
+          color: #666
+        }
+      }
+    }
+    &__lineup {
+      display: flex;
+      font-weight: bold;
+      position: relative;
+      justify-content: center;
+      align-items: center;
+      &__title {
+        flex: 1;
+        font-size: 22px;
+        padding: 10px 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: #333;
+        &__score {
+          padding: 10px;
+          color: #d4231c;
+        }
+      }
+      &__result {
+        width: 200px;
+        text-align: right;
+        font-size: 30px;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        position: absolute;
+        right: 0;
+        padding-right: 20px;
+        &__txt {
+          color: #fff;
+          width: 50px;
+          height: 50px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          border-radius: 50%;
+          margin-right: 10px;
+          background-image: linear-gradient(to right, black, #d4231c);
+        }
+      }
+    }
+    &__bottom {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+      color: #999;
+      &__left {
+        position: absolute;
+        left: 0;
+        width: 200px;
+        display: flex;
+        font-weight: 500;
+      }
+    }
+  }
 }
