--- a/src/pages/recommend/components/RecommendExpert/index.module.less
+++ b/src/pages/recommend/components/RecommendExpert/index.module.less
@@ -3,7 +3,7 @@
   background: #fff;
   border-radius: 25px;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: flex-start;
   &__li {
     width: 24%;
     padding: 20px 0;
@@ -16,6 +16,7 @@
     height: 120px;
     width: 120px;
     border-radius: 50%;
+    border: 1px solid #f8e5e4;
   }
   &__name {
     flex: 1;
