--- a/src/pages/score/index.module.less
+++ b/src/pages/score/index.module.less
@@ -73,6 +73,19 @@
       position: relative;
       justify-content: center;
       align-items: center;
+      &__like {
+        width: 50px;
+        position: absolute;
+        left: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 20px;
+        &__img {
+          width: 26px;
+          height: 26px;
+        }
+      }
       &__title {
         flex: 1;
         font-size: 22px;
