--- a/src/pages/recommend/index.module.less
+++ b/src/pages/recommend/index.module.less
@@ -13,20 +13,19 @@
   }
   .tabs {
     display: flex;
-    height: 70px;
+    height: 80px;
     padding: 0 20px;
     border-radius: 30px;
-    font-size: 28px;
     align-items: center;
     justify-content: flex-start;
     background: #fff;
     &__item {
       background: #5f5d5c;
-      padding: 10rpx 30rpx;
+      padding: 10px 30px;
       color: #fff;
-      border-radius: 30rpx;
-      font-size: 24rpx;
-      margin-right: 20rpx;
+      border-radius: 30px;
+      font-size: 32px;
+      margin-right: 20px;
       line-height: normal;
       border: 0;
       height: auto;
