--- a/src/components/LineChart/index.module.less
+++ b/src/components/LineChart/index.module.less
@@ -1,7 +1,11 @@
-.line-chart {
-  position: absolute;
+.line__chart {
+  position: relative;
   width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
+  height: 300px;
+  overflow: hidden;
+  &__canvas {
+    position: relative;
+    width: 100%;
+    height: 300px;
+  }
 }
