--- a/src/pages/recommend/components/RecommendExpert/index.module.less
+++ b/src/pages/recommend/components/RecommendExpert/index.module.less
@@ -1,39 +1,12 @@
-.expert__list {
+.expert__list{
   display: flex;
   background: #fff;
   border-radius: 25px;
   flex-wrap: wrap;
   justify-content: flex-start;
-  &__li {
-    width: 24%;
-    padding: 20px 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    overflow: hidden;
-  }
-  &__img {
-    height: 120px;
-    width: 120px;
-    border-radius: 50%;
-    border: 1px solid #f8e5e4;
-  }
-  &__name {
-    flex: 1;
-    font-size: 24px;
-    margin: 15px 0;
-    color: #666;
-  }
-  &__num {
-    font-size: 20px;
-    background: #d4231c;
-    color: #a9a8a8;
-    border-radius: 30px;
-    padding: 2px 16px;
-  }
 }
 .hot__title {
-  font-size: 30px;
+  font-size: 32px;
   color: #333;
   margin: 30px 0 0 0;
   padding: 0 20px;
@@ -45,7 +18,6 @@
   padding: 20px 50px;
   .hot__detail {
     display: flex;
-    height: 88px;
     .hot__country {
       flex: 1;
       display: flex;
@@ -59,15 +31,16 @@
       }
       .hot__name {
         flex: 1;
-        font-size: 20px;
+        font-size: 26px;
         display: flex;
         align-items: center;
+        padding: 8px 0 0 0;
       }
     }
     .hot__score {
       width: 100px;
       display: flex;
-      font-size: 24px;
+      font-size: 34px;
       font-weight: bold;
       justify-content: center;
       align-items: center;
@@ -82,15 +55,16 @@
     flex-direction: column;
     .hot__percent {
       flex: 1;
-      font-size: 18px;
+      font-size: 28px;
       color: #999;
     }
     .hot__part {
-      height: 12px;
+      height: 14px;
       width: 100%;
       background: #ddd;
       display: flex;
       border-radius: 20px;
+      margin: 3PX 0 5PX;
       &__p1 {
         background: #cccccc;
         border-radius: 20px 0 0 20px;
@@ -106,9 +80,10 @@
     }
   }
   .hot__note {
+    padding: 20px 0 0 0;
     display: flex;
     height: 50px;
-    font-size: 20px;
+    font-size: 24px;
     justify-content: flex-start;
     align-items: center;
     .hot__time {
@@ -116,8 +91,8 @@
       color: #999;
     }
     .hot__like {
-      height: 26px;
-      width: 26px;
+      height: 40px;
+      width: 40px;
       float: right;
     }
   }
