feat(-): 预测详情页数据处理

--- a/src/components/ScoreItem/index.module.less
+++ b/src/components/ScoreItem/index.module.less
@@ -1,7 +1,8 @@
 .item {
   padding: 20px 40px;
-  border-bottom: 10px solid #f2f2f2;
-  font-size: 32px;
+  border-bottom: 10px solid #eceded;
+  font-size: 26px;
+  background: #fff;
   &__top {
     display: flex;
     justify-content: center;
@@ -37,7 +38,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      font-size: 30px;
+      font-size: 28px;
       &__img {
         width: 40px;
         height: 40px;
@@ -45,7 +46,7 @@
     }
     &__title {
       flex: 1;
-      font-size: 34px;
+      font-size: 28px;
       padding: 10px 0;
       display: flex;
       align-items: center;
@@ -59,7 +60,7 @@
     &__result {
       width: 200px;
       text-align: right;
-      font-size: 36px;
+      font-size: 32px;
       display: flex;
       justify-content: flex-end;
       align-items: center;
