--- a/src/app.less
+++ b/src/app.less
@@ -4,6 +4,9 @@
 .nut-tabs-titles-item {
   font-size: 32px;
 }
+.nut-tabpane {
+  padding: 0;
+}
 .score-swiper {
   height: 100%!important;
   .nut-swiper-inner {
