--- a/src/components/MyAttention/index.module.less
+++ b/src/components/MyAttention/index.module.less
@@ -2,9 +2,9 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  font-size: 32px;
+  font-size: 30px;
   width: 100%;
-  background: #dededd;
+  background: #eceded;
   padding-top: 20px;
   &__title {
     background: #fff;
