--- a/src/pages/home/detail/index.module.less
+++ b/src/pages/home/detail/index.module.less
@@ -171,7 +171,7 @@
       display: flex;
     }
     &__scroll{
-      background: #dededd;
+      background: #eceded;
       color: #625e5d;
       height: 200px;
       &__container {
@@ -241,6 +241,172 @@
     border: 1px solid #f2f2f2;
     .nut-table-wrapper {
       border: 0;
+    }
+  }
+  .list{
+    &__header {
+      display: flex;
+      font-size: 26px;
+      padding: 10px 0 0 40px;
+      color: #999;
+      &__item {
+        &:first-child {
+          text-align: left;
+          flex: 1;
+        }
+        flex: 3;
+        text-align: center;
+        padding: 10px;
+      }
+    }
+    &__li {
+      display: flex;
+      font-size: 26px;
+      color: #333;
+      padding: 20px 0 20px 40px;
+      &:nth-of-type(even) {
+        background: #f6f7f9;
+      }
+      &__item {
+        flex: 1;
+        text-align: center;
+        &:first-child {
+          text-align: left;
+        }
+      }
+    }
+  }
+  .spfli {
+    &__header {
+      display: flex;
+      font-size: 26px;
+      padding: 10px 0 0 40px;
+      color: #999;
+      &__item {
+        flex: 3;
+        text-align: center;
+        padding: 10px 0;
+        &:first-child {
+          flex: 4;
+          text-align: left;
+        }
+      }
+    }
+    &__li {
+      display: flex;
+      font-size: 26px;
+      color: #333;
+      padding-left: 40px;
+      &:nth-of-type(even) {
+        background: #f6f7f9;
+      }
+      &_active {
+        background: #fef9e6!important;
+      }
+      &__item {
+        flex: 3;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 10px 0;
+        &:first-child {
+          flex: 4;
+          display: flex;
+          align-items: flex-start;
+        }
+        &:nth-of-type(2) {
+          color: #999;
+        }
+        &__td {
+          flex: 1;
+          padding: 5px 0;
+        }
+      }
+    }
+  }
+  .bflist {
+    display: flex;
+    &__left {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      font-size: 26rpx;
+      margin: 10px 0;
+      padding: 0 20px;
+      border-right: 1px solid #eaeaea;
+      &__li {
+        flex: 1;
+        display: flex;
+        align-items: center;
+        padding: 20px 0;
+        &:first-of-type{
+          color: #da251c;
+        }
+        &:nth-of-type(2) {
+          color: #459ee1;
+        }
+        &:last-of-type {
+          color: #6bb772;
+          border-bottom: 0;
+        }
+        border-bottom: 1px solid #eaeaea;
+        &__name {
+          flex: 1;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        }
+        &__num {
+          flex: 1;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          &__percent {
+            flex: 1;
+          }
+          &__count {
+            flex: 1;
+            color: #999;
+          }
+        }
+      }
+    }
+    &__right {
+      flex: 1;
+      overflow: hidden;
+      justify-content: center;
+      align-items: center;
+      display: flex;
+    }
+    &__table {
+      display: flex;
+      flex-direction: column;
+      font-size: 26px;
+      margin-bottom: 50px;
+      &__tr {
+        display: flex;
+        &__th {
+          flex: 1;
+          display: flex;
+          justify-content: center;
+          background: #f7f8f9;
+          padding: 18px 0;
+          color: #999;
+        }
+        &:nth-of-type(3) {
+          border-top: 10px solid #f7f8f9;
+          border-bottom: 10px solid #f7f8f9;
+        }
+        &__td {
+          flex: 1;
+          display: flex;
+          justify-content: center;
+          padding: 14px 0;
+          color: #333;
+        }
+      }
     }
   }
 }
