--- a/src/pages/recommend/expertDetail/index.module.less
+++ b/src/pages/recommend/expertDetail/index.module.less
@@ -6,7 +6,7 @@
   right: 0;
   overflow-y: auto;
   padding: 20px;
-  background: #dededd;
+  background: #eceded;
   .overview {
     background: #fff;
     border-radius: 25px;
