--- a/src/pages/recommend/index.module.less
+++ b/src/pages/recommend/index.module.less
@@ -4,7 +4,7 @@
   top: 0;
   left: 0;
   bottom: 0;
-  background: #dededd;
+  background: #eceded;
   display: flex;
   flex-direction: column;
   overflow: hidden;
