feat(-): 收藏/取消比赛、关注/取消专家功能实现

--- a/src/pages/recommend/expertDetail/index.module.less
+++ b/src/pages/recommend/expertDetail/index.module.less
@@ -46,8 +46,11 @@
       }
     }
     .info__follow {
-      width: 100px;
+      width: 126px;
       background: #d4231c;
+      &_active {
+        background: #999;
+      }
     }
   }
   .plan {
