feat(-): 计算器保存方案

--- a/src/pages/mine/calculatePro/index.module.less
+++ b/src/pages/mine/calculatePro/index.module.less
@@ -158,6 +158,10 @@
           border: 0 solid #e7e7e7;
           display: flex;
           box-sizing: border-box;
+          &_active {
+            color: #fff;
+            background: #f22;
+          }
           &:nth-child(2) {
             border-left-width: 1px;
             border-right-width: 1px;
