feat(-): 推荐比赛支持详情查看

--- a/src/components/MyAttention/index.module.less
+++ b/src/components/MyAttention/index.module.less
@@ -18,4 +18,9 @@
     background: #fff;
     margin: 20px;
   }
+  &__expert__li {
+    background: #fff;
+    margin: 20px;
+    display: flex;
+  }
 }
