feat(-):【比分】全部、进行中不作日期筛选

--- a/src/pages/score/index.module.less
+++ b/src/pages/score/index.module.less
@@ -39,7 +39,10 @@
   swiper {
     height: 100%!important;
   }
-  .outer{
-    padding: 10px 0 170px 0;
+  &__outer{
+    padding: 10px 0 160px 0;
+  }
+  &__outer2 {
+    padding: 10px 0 90px 0;
   }
 }
