--- a/src/pages/home/index.module.less
+++ b/src/pages/home/index.module.less
@@ -16,7 +16,8 @@
     justify-content: center;
     align-items: center;
     .img__logo {
-      width: 70%;
+      width: 100%;
+      height: 100%;
     }
   }
   .search__form {
