feat(-): 个人中心页面新增分享功能，个别页面数据异常处理，顶部图片样式调整

--- a/src/pages/mine/mine.module.less
+++ b/src/pages/mine/mine.module.less
@@ -17,6 +17,8 @@
     margin-bottom: 50px;
     .img__logo {
       width: 350px;
+      height: 100%;
+      overflow: hidden;
     }
     .icon {
       position: absolute;
