--- a/src/pages/mine/components/AboutList/index.module.less
+++ b/src/pages/mine/components/AboutList/index.module.less
@@ -5,6 +5,10 @@
   height: 100%;
   width: 100%;
   background: #eceded;
+  overflow-y: auto;
+  &__content {
+    //padding-bottom: 50px;
+  }
   &__logo {
     height: 300px;
     width: 100%;
@@ -106,6 +110,40 @@
           letter-spacing: 1PX;
         }
       }
+    }
+  }
+  .intro__img {
+    display: flex;
+    height: 150px;
+    background: #fff;
+    margin: 30px 20px 10px;
+    padding: 0 30px;
+    border-radius: 10px;
+    overflow: hidden;
+    &__logo {
+      width: 100%;
+      height: 100%;
+    }
+  }
+  .customer {
+    display: flex;
+    height: 80px;
+    background: #fff;
+    margin: 10px 20px;
+    padding: 0 30px;
+    border-radius: 10px;
+    position: relative;
+    justify-content: flex-start;
+    align-items: center;
+    &__qq {
+      width: 40px;
+      height: 40px;
+    }
+    &__txt {
+      font-size: 26px;
+      color: #666;
+      margin-left: 20px;
+      font-weight: lighter;
     }
   }
 }
