--- a/src/pages/mine/components/AboutList/index.module.less
+++ b/src/pages/mine/components/AboutList/index.module.less
@@ -117,19 +117,19 @@
     height: 150px;
     background: #fff;
     margin: 30px 20px 10px;
-    padding: 0 30px;
     border-radius: 10px;
     overflow: hidden;
     &__logo {
       width: 100%;
       height: 100%;
+      overflow: hidden;
     }
   }
   .customer {
     display: flex;
     height: 80px;
     background: #fff;
-    margin: 10px 20px;
+    margin: 20px 20px 10px;
     padding: 0 30px;
     border-radius: 10px;
     position: relative;
@@ -144,6 +144,27 @@
       color: #666;
       margin-left: 20px;
       font-weight: lighter;
+    }
+  }
+  &__overlay {
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    &__content {
+      display: flex;
+      width: 300px;
+      height: 300px;
+      background: #fff;
+      border-radius: 8px;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      position: relative;
+      &__qrcode {
+        width: 100%;
+        height: 100%;
+      }
     }
   }
 }
