--- a/src/components/Header/index.module.less
+++ b/src/components/Header/index.module.less
@@ -6,7 +6,7 @@
   align-items: center;
   justify-content: center;
   &__img {
-    height: 120px;
+    height: 100%;
     width: 100%;
     overflow: hidden;
   }
