--- a/src/pages/mine/components/AboutList/index.module.less
+++ b/src/pages/mine/components/AboutList/index.module.less
@@ -18,8 +18,8 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    .img__logo {
-      width: 350px;
+    &__bg {
+      width: 100%;
       height: 100%;
     }
   }
