--- a/src/pages/recommend/expertDetail/index.module.less
+++ b/src/pages/recommend/expertDetail/index.module.less
@@ -226,6 +226,10 @@
         font-size: 24px;
         padding: 0 0 0 20px;
       }
+      &__right__r {
+        padding: 0 20px 0 0;
+        text-align: right;
+      }
     }
   }
   &__overlay {
