feat(-): 页面展示优化；ui调整

--- a/src/pages/mine/components/AboutList/index.module.less
+++ b/src/pages/mine/components/AboutList/index.module.less
@@ -142,7 +142,7 @@
     &__txt {
       font-size: 26px;
       color: #666;
-      margin-left: 20px;
+      border: 0;
       font-weight: lighter;
     }
   }
