feat(-): 登陆鉴权逻辑优化

--- a/src/components/ScoreItem/index.module.less
+++ b/src/components/ScoreItem/index.module.less
@@ -60,7 +60,7 @@
     &__result {
       width: 200px;
       text-align: right;
-      font-size: 32px;
+      font-size: 24px;
       display: flex;
       justify-content: flex-end;
       align-items: center;
@@ -69,14 +69,17 @@
       padding-right: 20px;
       &__txt {
         color: #fff;
-        width: 60px;
-        height: 60px;
+        width: 40px;
+        height: 40px;
         display: flex;
         justify-content: center;
         align-items: center;
         border-radius: 50%;
         margin-right: 10px;
         background-image: linear-gradient(to right, black, #d4231c);
+        &_grey {
+          background: grey;
+        }
       }
     }
   }
