--- a/src/pages/mine/components/AboutList/index.module.less
+++ b/src/pages/mine/components/AboutList/index.module.less
@@ -144,6 +144,11 @@
       color: #666;
       border: 0;
       font-weight: lighter;
+      &:before {
+        background: #fff!important;
+        box-shadow: none;
+        color: #f22;
+      }
     }
   }
   &__overlay {
