--- a/src/pages/mine/inviteFriends/index.module.less
+++ b/src/pages/mine/inviteFriends/index.module.less
@@ -40,13 +40,13 @@
     font-size: 26px;
     &__icon {
       position: absolute;
-      width: 120px;
-      height: 120px;
+      width: 100px;
+      height: 100px;
       left: -15px;
-      top: -15px;
+      top: 0;
       &__img {
-        width: 120px;
-        height: 120px;
+        width: 100px;
+        height: 100px;
         border-radius: 50%;
       }
     }
@@ -56,9 +56,9 @@
       flex-direction: column;
       justify-content: center;
       align-items: flex-start;
-      padding-left: 130px;
+      padding-left: 100px;
       &__name {
-        font-size: 34px;
+        font-size: 30px;
       }
       &__level {
         font-size: 24px;
