feat(-): 个人中心页接口重复调用优化

--- a/src/pages/mine/inviteFriends/index.module.less
+++ b/src/pages/mine/inviteFriends/index.module.less
@@ -105,6 +105,7 @@
       border-radius: 35px;
       font-weight: bold;
       color: #fff;
+      border: 0;
       background-image: linear-gradient(to right, black, #d4231c);
     }
   }
