--- a/src/pages/home/index.module.less
+++ b/src/pages/home/index.module.less
@@ -17,7 +17,7 @@
     align-items: center;
     .img__logo {
       width: 100%;
-      height: 100%;
+      height: 200px;
     }
   }
   .search__form {
